[tool.poetry]
name = "jasonn2023"
version = "0.1.0"
description = ""
authors = ["mrjas <mrjasonnlin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.5"
dj-config-url = "^0.1.1"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
whitenoise = "^6.3.0"
brotli = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
